feat: 화면별 크기 세팅

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="haru_q_wait">내일을 기다려주세요</string>
     <string name="back">뒤로가기</string>
     <string name="q_number">NO.</string>
+    <string name="worry_info">마음속으로 고민을 생각하고 위의 달을 터치하세요</string>
 
 </resources>
