feat : 마지막 질문 새로운 행 생성, 순서, list item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="back">뒤로가기</string>
     <string name="q_number">NO.</string>
     <string name="worry_info">마음속으로 고민을 생각하고 위의 달을 터치하세요</string>
+    <string name="back_text">종료하려면 한번 더 누르세요</string>
 
 </resources>
